[gd_scene load_steps=4 format=3 uid="uid://60gkfls6gjjg"]

[ext_resource type="Script" uid="uid://dma6d0r2m4r8l" path="res://Scripts/crawler_enemy.gd" id="1_bkh62"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hj566"]
size = Vector2(69, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_o43cp"]
radius = 24.0

[node name="CrawlerEnemy" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_bkh62")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hj566")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(3, -12)
scale = Vector2(3, 3)
polygon = PackedVector2Array(-11, 10, 7, 10, 12, 7, 5, 0, -2, -1, -10, 1, -14, 5)

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2(3, -12)
scale = Vector2(3, 3)
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(5, 3, 7, 4, 5, 5, 3, 4)

[node name="GravityDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityDetection"]
shape = SubResource("CircleShape2D_o43cp")

[node name="GroundRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 19)
